# flask-rest-template

./: .pylintrc  README.md  pyproject.toml  run.sh
src/: __init__.py  config.py  docs.py
src/common/: db.py  errors.py  types.py
src/static/: openapi.txt
src/v1/: __init__.py
src/v1/friends/: __init__.py
src/v1/media/: __init__.py
terraform/: backends.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py  test_api_handler.py  test_config.py  test_db.py  test_friends_handler.py  test_main_handler.py  test_media_handler.py
